--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.15",
     "@mdx-js/react": "^1.6.22",
     "antd": "^4.18.7",
+    "masonic": "^3.6.2",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -27,6 +28,9 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.15",
     "@tsconfig/docusaurus": "^1.0.4",
+    "docusaurus-plugin-less": "^2.0.2",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "typescript": "^4.5.5"
   },
   "browserslist": {
