--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@mdx-js/react": "^1.6.22",
     "@supabase/supabase-js": "^1.35.1",
     "antd": "^4.19.5",
-    "dotenv": "^16.0.0",
     "masonic": "^3.6.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
@@ -29,6 +28,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.18",
     "@tsconfig/docusaurus": "^1.0.5",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "docusaurus-plugin-less": "^2.0.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
