--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
     "@supabase/supabase-js": "^1.35.1",
+    "@vercel/node": "^1.15.2",
     "antd": "^4.19.5",
     "masonic": "^3.6.4",
     "react": "^18.0.0",
