--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: keep-supabase-alive
 on:
   schedule:
-    - cron: '0 10 8 ? * MON,WED,SUN *'
+    - cron: '42 3 * * 1,3'
 jobs:
   cron:
     runs-on: ubuntu-latest
