--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "jiahao-portfolio",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": ">=16 <18"
+  },
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
