--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "jiahao-portfolio",
-  "version": "0.0.1",
+  "name": "jiahao-space",
+  "version": "0.0.2",
   "private": true,
-  "engines": {
-    "node": ">=16 <18"
-  },
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
@@ -18,37 +15,36 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.8.0",
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
+    "@arco-design/web-react": "^2.48.0",
+    "@docusaurus/core": "2.4.0",
+    "@docusaurus/preset-classic": "2.4.0",
     "@mdx-js/react": "^1.6.22",
-    "@supabase/supabase-js": "^2.2.3",
-    "@vercel/node": "^2.8.2",
-    "antd": "^4.19.5",
+    "@vercel/postgres": "^0.3.0",
     "masonic": "^3.7.0",
+    "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0",
-    "@tsconfig/docusaurus": "^1.0.6",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "docusaurus-plugin-less": "^2.0.2",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "typescript": "^4.9.4"
+    "@docusaurus/module-type-aliases": "2.4.0",
+    "@docusaurus/types": "^2.4.0",
+    "@tsconfig/docusaurus": "^1.0.5",
+    "@types/node": "^20.1.4",
+    "@vercel/node": "^2.14.2",
+    "typescript": "^4.7.4"
   },
   "browserslist": {
     "production": [
-      ">1%",
-      "not IE 11",
-      "not dead",
-      "not op_mini all"
+      "last 2 versions"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
